@@ -39,6 +39,9 @@ public enum DAGTerminationCause {
   /** DAG failed during output commit. */
   COMMIT_FAILURE,
 
+  /** In some cases, vertex could not rerun, e.g. its output been committed as a shared output of vertex group */
+  VERTEX_RERUN_AFTER_COMMIT,
+
   /** DAG failed while trying to write recovery events */
   RECOVERY_FAILURE,
 
